@@ -1,7 +1,6 @@
 package nl.vpro.wonvpp.domain;
 
-import java.io.IOException;
-import java.io.InputStream;
+import java.io.*;
 import java.util.List;
 import java.util.Locale;
 
@@ -30,20 +29,23 @@ public class Utils {
 
         // Ensure empty strings are treated as null for java.util.Locale values
         SimpleModule localeModule = new SimpleModule();
-        localeModule.addDeserializer(Locale.class, new StdDeserializer<Locale>(Locale.class) {
+        localeModule.addDeserializer(Locale.class, new StdDeserializer<>(Locale.class) {
+            @Serial
+            private static final long serialVersionUID = 7661781034564971827L;
+
             @Override
             public Locale deserialize(JsonParser p, DeserializationContext ctxt) throws IOException {
                 JsonToken t = p.getCurrentToken();
                 if (t == JsonToken.VALUE_STRING) {
                     String txt = p.getText().trim();
-                    if (txt.length() == 0) {
+                    if (txt.isEmpty()) {
                         return null;
                     }
                     // try language tag first, fallback to language-only constructor
                     try {
                         return Locale.forLanguageTag(txt);
                     } catch (Exception e) {
-                        return new Locale(txt);
+                        return Locale.of(txt);
                     }
                 } else if (t == JsonToken.VALUE_NULL) {
                     return null;
@@ -59,9 +61,8 @@ public class Utils {
 
     public static List<CatalogEntry> unmarshal(InputStream stream) throws IOException {
         // Read a top-level JSON array into a List<CatalogEntry>
-        List<CatalogEntry> entries = mapper.readerForListOf(CatalogEntry.class)
+        return mapper.readerForListOf(CatalogEntry.class)
             .readValue(stream);
-        return entries;
 
     }
 }
